public/css/custom.css
/* Main Body */

body {
  background-color: #5db3c3;
}

h1  {
  font-family: 'Merriweather', serif;
  font-size: 4.5em;
}

h3, p {
  font-family: 'Merriweather', serif;
  font-size: 1.5em;
  font-weight: bold;
  color: white;
}

p {
  font-size: 1em;
}

/* Footer Info */
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  font-size: 2.5em;
  background-color: #f8f8f8;
}

.footer p {
  color: black;
}

a {
  color: black;
  text-decoration: none;
}

a:hover {
  color: black;
  text-decoration: none;
}

